fixed the singin popup scaling on smaller displays :)

--- a/frontend-textadventure/src/components/SignUpComponent/SignUpComponent.css
+++ b/frontend-textadventure/src/components/SignUpComponent/SignUpComponent.css
@@ -5,7 +5,8 @@
     width: 15%;
     z-index: 100;
     top: 8%;
-    right: 1%
+    right: 1%;
+    min-width: 200px;
 }
 
 .signUpFormField{
